--- a/column/04/index.html
+++ b/column/04/index.html
@@ -11,8 +11,8 @@
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>社員の英語スピーキング力をVersantで可視化しませんか｜Versant（ヴァーサント）【法人版】</title>
-  <meta name="description" content="プロが認める英語テストの決定版-日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「Versant（ヴァーサント）」です。「スピーキング力」の向上にVersantをどのように活用しているのか、その核心に迫ります。">
+  <title>【2025年度最新版】英語スピーキングをChat GPTで強化！AI時代の最新学習法【プロンプト付き】</title>
+  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="format-detection" content="telephone=no, email=no, address=no">
 
@@ -20,11 +20,11 @@
 
   <meta name="robots" content="noarchive"/>
   <meta property="og:type" content="article">
-  <meta property="og:title" content="社員の英語スピーキング力をVersantで可視化しませんか｜Versant（ヴァーサント）【法人版】">
-  <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/column/02/index.html">
-  <meta property="og:description" content="プロが認める英語テストの決定版-日本企業のグローバル展開が加速する昨今、ビジネスパーソンには本質的なグローバルスキルが求められています。グローバル環境下でビジネスを推進するには異文化理解やグローバルマインドセット、また「英語でのコミュニケーションスキル」が欠かせません。ビジネスパーソンの英語学習の新たな主流、コーチング英会話を運営するプロが、英語力の成長を促す秘訣、と語るのが「Versant（ヴァーサント）」です。「スピーキング力」の向上にVersantをどのように活用しているのか、その核心に迫ります。">
+  <meta property="og:title" content="【2025年度最新版】英語スピーキングをChat GPTで強化！AI時代の最新学習法【プロンプト付き】">
+  <meta property="og:url" content="https://school.nikkei.co.jp/nn/special/versant/column/04/index.html">
+  <meta property="og:description" content="">
   <meta property="og:image" content="https://school.nikkei.co.jp/nn/feature/hr/assets/img/ogp_nbs_logo.jpg">
-  <meta property="og:site_name" content="社員の英語スピーキング力をVersantで可視化しませんか｜Versant（ヴァーサント）【法人版】">
+  <meta property="og:site_name" content="【2025年度最新版】英語スピーキングをChat GPTで強化！AI時代の最新学習法【プロンプト付き】">
   <meta property="og:locale" content="ja_JP">
   <meta property="fb:app_id" content="135452203504570">
   <link rel="shortcut icon" href="https://school.nikkei.co.jp/nn/parts/school2016/images/favicon.ico" type="image/vnd.microsoft.icon">
@@ -99,7 +99,7 @@
         そんな気持ちに応えるために、この記事ではAIを活用した最新のスピーキング学習法をご紹介します。
         </p>
       <p class="p_04">なかでも「ChatGPT」を使った練習法は、2025年現在、多くの英語学習者にとって最も効率的な選択肢のひとつです。</p>
-      <p class="p_04">今すぐに効果を実感したい方は、本編の<span>「ChatGPTを使った勉強法［自己紹介編］」</span>までスキップしてみてください。</p>
+      <p class="p_04">今すぐに効果を実感したい方は、本編の<span><a class="jumpto1" href="#jumpto">「ChatGPTを使った勉強法［自己紹介編］」</a></span>までスキップしてみてください。</p>
       <h2 class="h2_04">スピーキングとは？</h2>
       <img src="../../assets/img/column_04/Illustration_2.png" alt="">
       <p class="p_04">スピーキング力を伸ばすには、まず「話す」とはどんな行為なのかを理解することが大切です。</p>
@@ -198,7 +198,7 @@
       <p class="p_04">そして、こうした「話せる力」が実際にどれほど身についているかを知るには、英語テストのVERSANTが役立ちます。</p>
       <p class="p_04">この試験は、20分で話す力を「聞く・理解する・組み立てる・発話する」という一連の流れで評価し、流暢さ・語彙・文の構成力・発音・リスニングなどを総合的にスコア化します。</p>
       <p class="p_04">AIによる自動採点により、短時間で精度の高いフィードバックが得られるのも特徴です。学習の成果を可視化し、次のステップを考えるうえで、信頼できる指標となるでしょう。</p>
-      <h2 class="h2_04">Chat GPTを使った勉強法[自己紹介編]</h2>
+      <h2 class="h2_04" id="jumpto">Chat GPTを使った勉強法[自己紹介編]</h2>
       <img src="../../assets/img/column_04/Illustration_6.png" alt="">
       <p class="p_04">ChatGPTはログインなしでも利用できますが、より良い結果を得たい場合は、無料アカウントを作成してログインしたうえでの利用をおすすめします。</p>
       <p class="p_04">この記事では、初めての商談において最も重要な“第一印象”を左右する自己紹介を、ChatGPTを活用して効率よく学ぶ方法をご紹介します。</p>
@@ -329,7 +329,7 @@
       <img src="../../assets/img/column_04/9..png" alt="">
       <p class="txt_mark">ここで少しChatGPTから離れて、音読練習にフォーカスしていきます。</p>
       <p class="p_04">入力した文字を音声化してくれる、Text to Speech(以下、TTS)は英語学習には欠かせません。</p>
-      <p class="p_04">中でもおすすめなの<span>Narakeet</span>。音声の自然さが高く、しかも音源のダウンロードまで無料で使える優れたTTSツールです。</p>
+      <p class="p_04">中でもおすすめなの<span><a class="jumpto1" href="https://www.narakeet.com/create/ttsmp3.html">Narakeet</a></span>。音声の自然さが高く、しかも音源のダウンロードまで無料で使える優れたTTSツールです。</p>
       <p class="p_04">使い方はシンプルです。<br>
         Webサイトにアクセスし、スクリプト欄に先ほど作成した自己紹介文を貼り付けて、画面右下の「Create Audio」をクリックするだけ。<br>
         しばらく待つと音声が生成されるので、音声ファイルをダウンロードして練習に使いましょう。
@@ -343,7 +343,7 @@
         この方法を繰り返すことで、日本語のリズムで話していた英語が、自然な英語らしいテンポや抑揚に整っていきます。
         </p>
       <p class="p_04">音声が速く感じる場合は、0.5〜0.7倍速に調整して練習しましょう。<br>
-        再生速度の調整には、速度変更ができる<span>こちら</span>を使うのがおすすめです。</p>
+        再生速度の調整には、速度変更ができる<span><a class="jumpto1" href="https://mp3cut.net/ja/change-speed">こちら</a></span>を使うのがおすすめです。</p>
       <p class="p_04"><span class="txt_bold">② リッスン・アンド・リピート（Listen and Repeat）</span><br>
         音声を一度聞いてから、スクリプトを見ずに同じ英文を自分で繰り返す練習です。<br>
         聞いた音を正確に再現する力を養うと同時に、英語表現が自然な形で定着していきます。
