--- a/column/04/index.html
+++ b/column/04/index.html
@@ -208,9 +208,9 @@
       <img src="../../assets/img/column_04/Illustration_07.gif" alt="">
       <p class="p_04">AIでより良い結果を得たいのであれば、理想的なモデルを学習させ、自分用にカスタマイズさせるのが最も効率的です。</p>
       <p class="p_04">ChatGPTを開いて、以下のプロンプトをコピペしましょう。</p>
-      <div class="txt_box">
+      <div class="txt_box_bottom">
         <p class="p_box">業種は[〇〇]です。以下のテンプレートに沿った英語の自己紹介文と日本語訳を作成しなさい。</p>
-        <p class="p_box">Hi, I’m [1. ニックネーム] from [2. 会社名].<br>
+        <p class="p_box2">Hi, I’m [1. ニックネーム] from [2. 会社名].<br>
           I’m part of the [3. 部署・チーム名] and mainly [4. 担当している業務 or 関わる相手・目的].<br>
           I’m here today to [5. 訪問・参加の主目的] and [6. サポート・提案の意図].<br>
           Thanks for having me—I'm looking forward to our [7. 会話や関係性に関する締めの言葉].</p>
@@ -232,7 +232,7 @@
         </ul>
       </div> 
       <img src="../../assets/img/column_04/2.png" alt="chatgpt"> 
-      <p class="txt_mark"></p>
+      <p class="txt_mark">※Chat GPT無料版では、上記のように一部が日本語で表示される場合もあります。</p>
       <h3 class="h3_04">3.校正</h3>
       <img src="../../assets/img/column_04/Illustration_8.png" alt="">
       <p class="p_04">前のステップで、 理想通りにならなかった文章もここで校正します。</p>
@@ -244,37 +244,37 @@
         </ul>
       </div>
       <img src="../../assets/img/column_04/3.1.png" alt="">
-      <p class="p_04">より適切な表現と、その表現が選ばれた理由を解説してくれます。</p>
+      <p class="narrative">より適切な表現と、その表現が選ばれた理由を解説してくれます。</p>
       <img src="../../assets/img/column_04/3.2.png" alt="">
-      <p class="p_04">英日の自己紹介が完成しました。</p>
+      <p class="narrative">英日の自己紹介が完成しました。</p>
       <h3 class="h3_04">4.日本語訳を英語の語順に並び替える</h3>
       <p class="p_04">美味しい料理に下ごしらえが欠かせないように、英語学習もこのステップでひと手間かけることで、理解の質がグッと上がります。</p>
       <p class="p_04">英語を日本語に訳すのではなく、英語の語順のまま理解する感覚を養う練習です。</p>
       <p class="p_04">この作業は「サイトトランスレーション」や「直読直解」と呼ばれ、スピーキングにおける文章化の力を高めるのにも役立ちます。</p>
       <p class="p_04">回は1分程度の自己紹介なので、中級〜上級の方であればこのステップをスキップしていただいても問題ありません。</p>
       <div class="txt_box">
-        <p>以下のルールに従って、日本語訳を英語の語順で並べ替え、スラッシュ (/) で各部分を区切ってください</p>
-        <p class="txt_bold">ルール：</p>
+        <p class="p_box">以下のルールに従って、日本語訳を英語の語順で並べ替え、スラッシュ (/) で各部分を区切ってください</p>
+        <p class="txt_bold p_box3">ルール：</p>
         <ul class="dot">
           <li>英語の語順を最優先にし、翻訳時には日本語の自然な語順よりも英語の語順を反映させます。</li>
           <li>各文を一文ごとに分けて、英語の語順に従って意味の塊（チャンク）ごとにスラッシュ (/) で区切ります。</li>
           <li>英語の語順をそのまま反映し、できるだけ簡潔に、必要な部分だけをチャンクとして分けます</li>
         </ul>
-        <p class="txt_bold">正解例：</p>
-        <p>英語：I went to the park yesterday.</p>
-        <p>日本語（英語の語順に従って）：私は / 行きました / 公園に / 昨日</p>
-        <p class="top_margin">英語：She is reading a book in the room.</p>
+        <p class="txt_bold p_box3">正解例：</p>
+        <p class="p_box2">英語：I went to the park yesterday.</p>
+        <p class="p_box2">日本語（英語の語順に従って）：私は / 行きました / 公園に / 昨日</p>
+        <p class="top_margin p_box2">英語：She is reading a book in the room.</p>
         <p>日本語（英語の語順に従って）：彼女は / 読んでいます / 本を / 部屋で</p>
-        <p class="txt_bold">誤った例：</p>
-        <p>英語：I went to the park yesterday.</p>
-        <p>日本語：私は昨日公園に行きました。</p>
-        <p class="top_margin">英語：She is reading a book in the room.</p>
-        <p>日本語：彼女は部屋で本を読んでいます。</p>
+        <p class="txt_bold p_box3">誤った例：</p>
+        <p class="p_box2">英語：I went to the park yesterday.<br>
+          日本語：私は昨日公園に行きました。</p>
+        <p class="top_margin p_box2">英語：She is reading a book in the room.</p>
+        <p class="p_box2">日本語：彼女は部屋で本を読んでいます。</p>
       </div>
       <img src="../../assets/img/column_04/4.png" alt="chatgpt">
-      <p>出てきた日本語が不自然な場合は、 以下のプロンプトで再度校正してみてください。</p>
+      <p class="narrative">出てきた日本語が不自然な場合は、 以下のプロンプトで再度校正してみてください。</p>
       <div class="txt_box">
-        <p>以下の点に注意して、ステップ・バイ・ステップで改善してください。</p>
+        <p class="p_box">以下の点に注意して、ステップ・バイ・ステップで改善してください。</p>
         <ul class="dot">
           <li>日本語の語順が英語の語順に合っているかを確認してください。</li>
           <li>意味の塊（チャンク）ごとに、少し長めの日本語訳を作成してください。</li>
@@ -285,17 +285,17 @@
       <p class="p_04">英語フレーズの一部を空欄にし、日本語訳をヒントにしながら、スムーズに言えるまで音読しましょう。<br>この練習では、意味を意識しながらフレーズの型を定着させていくことがポイントです</p>
       <p class="p_04">今回隠している語句の一覧は、チャットの下部に記載していますので、必要に応じてご確認ください</p>
       <div class="txt_box">
-        <p>上記の自己紹介文を、以下のルールで一部の英語の語句のみ (　　　) で非表示にしてください。</p>
-        <p class="top_margin txt_bold">■ルール：</p>
-        <ul class="dot">
+        <p class="p_box">上記の自己紹介文を、以下のルールで一部の英語の語句のみ (　　　) で非表示にしてください。</p>
+        <p class="top_margin txt_bold p_box2">■ルール：</p>
+        <ul class="dot bottom_margin">
           <li>非表示にする語句は、英語学習者が混乱しやすいコロケーションや表現、または難易度が高い語句を選んでください。</li>
           <li>日本語はそのまま表示します。</li>
           <li>英文と日本文を1文ずつ表示します。</li>
           <li>最後に隠した英語の語句をまとめて表示し、復習しやすくしてください。</li>
         </ul>
-        <p class="top_margin">例：</p>
-        <p>こんにちは / 私はヤスです / 株式会社The Pastからきました</p>
-        <p>Hi, I’m (　　　) from (　　　) .</p>
+        <p class="p_box2">例：<br>
+        こんにちは / 私はヤスです / 株式会社The Pastからきました<br>
+        Hi, I’m (　　　) from (　　　) .</p>
       </div>
       <img src="../../assets/img/column_04/5.png" alt="">
       <h3 class="h3_04">6.虫食い英訳 レベル2</h3>
@@ -303,7 +303,7 @@
       <p class="p_04">（　　　）部分は、「interested (in)」のような、よく使われる語句のペアを中心に選んでいます。</p>
       <p class="p_04">これらを瞬時に補えるようになることで、仮に”in”のような機能語が聞き取れなくても、文の構造から意味を推測する力が養われていきます。</p>
       <div class="txt_box">
-        <p>1文あたりの（　　　）で非表示にする語句を増やし、難易度を上げてください。<br>
+        <p class="p_box2">1文あたりの（　　　）で非表示にする語句を増やし、難易度を上げてください。<br>
           また、最後に隠した英語の語句をすべてまとめて表示し、復習しやすくしてください。</p>
       </div>
       <img src="../../assets/img/column_04/6.png" alt="chatgpt">
@@ -312,7 +312,7 @@
       <p class="p_04">英文を全て隠し、 最終テストの準備をします。<br>
         日本語訳だけを手がかりに、スムーズに英語が口から出てくるまで音読練習しましょう。</p>
       <div class="txt_box">
-        <p>あなたは英語講師です。日本語訳のみを表示し、その後に私が入力する英文が先程の英語の自己紹介と一致しているかを確認してください。もし相違があれば、指摘した上で、正しい自己紹介文を最後に表示してください。</p>
+        <p class="p_box2">あなたは英語講師です。日本語訳のみを表示し、その後に私が入力する英文が先程の英語の自己紹介と一致しているかを確認してください。もし相違があれば、指摘した上で、正しい自己紹介文を最後に表示してください。</p>
       </div>
       <img src="../../assets/img/column_04/7.png" alt="">
       <h3 class="h3_04">8. 入力</h3>
@@ -324,10 +324,10 @@
       <img src="../../assets/img/column_04/8.png" alt="chatgpt">
       <img src="../../assets/img/column_04/8.1.png" alt="chatgpt">
       <img src="../../assets/img/column_04/8.2.png" alt="chatgpt">
-      <p class="p_04">上記のように発音に対するフィードバックが得られるため、次のステップにもつなげやすくなります。</p>
+      <p class="narrative">上記のように発音に対するフィードバックが得られるため、次のステップにもつなげやすくなります。</p>
       <h3 class="h3_04">9.音声化・音読練習</h3>
       <img src="../../assets/img/column_04/9..png" alt="">
-      <p class="txt_mark">ここで少しChatGPTから離れて、音読練習にフォーカスしていきます。</p>
+      <p class="narrative">ここで少しChatGPTから離れて、音読練習にフォーカスしていきます。</p>
       <p class="p_04">入力した文字を音声化してくれる、Text to Speech(以下、TTS)は英語学習には欠かせません。</p>
       <p class="p_04">中でもおすすめなの<span><a class="jumpto1" href="https://www.narakeet.com/create/ttsmp3.html">Narakeet</a></span>。音声の自然さが高く、しかも音源のダウンロードまで無料で使える優れたTTSツールです。</p>
       <p class="p_04">使い方はシンプルです。<br>
@@ -356,15 +356,15 @@
       <p class="p_04">音読練習が十分にできたら、以下のような応用的な使い方を取り入れることで、さらにスピーキング力を高めることができます。</p>
       <p class="txt_bold">想定問答</p>
       <div class="txt_box_2">
-        <p class="txt_bold"> 先程の自己紹介に対して、 想定される 相手からの質問を英語(日本語訳付き)で表示しなさい。</p>
+        <p class="txt_bold p_box2"> 先程の自己紹介に対して、 想定される 相手からの質問を英語(日本語訳付き)で表示しなさい。</p>
       </div>
       <img src="../../assets/img/column_04/10.png" alt="chatgpt">
       <p class="p_04">ロールプレイ</p>
       <div class="txt_box_2">
-        <p class="txt_bold"> 先程の自己紹介に対して、 想定される 相手からの質問を英語(日本語訳付き)で表示しなさい。</p>
+        <p class="txt_bold p_box2"> 先程の自己紹介に対して、 想定される 相手からの質問を英語(日本語訳付き)で表示しなさい。</p>
       </div>
       <img src="../../assets/img/column_04/10.1.png" alt="chatgpt">
-      <p class="p_04">※2025年3月27日現在、Chat GPTは音声技能に対するフィードバック能力は高くないため、それ以外の使い方の方が良いでしょう。</p>
+      <p class="txt_mark">※2025年3月27日現在、Chat GPTは音声技能に対するフィードバック能力は高くないため、それ以外の使い方の方が良いでしょう。</p>
       <h3 class="h3_04">まとめ</h3>
       <img src="../../assets/img/column_04/Illustration_10.gif" alt="">
       <p class="p_04">英語を話せるようになるためには、「概念化」「文章化」「音声化」という3つのプロセスをバランスよく鍛えることが大切です。</p>
