--- a/column/index.html
+++ b/column/index.html
@@ -134,6 +134,14 @@
                 <p class="column_date">2024/09/09</p>
               </div>
             </a>
+            <a href="../column/04/index.html" class="p-index__column_link">
+              <img src="../assets/img/column_04/Illustration_1.png" alt="コラムサムネイル">
+              <div class="p-index__column_link_info">
+                <h5 class="column_head">【2025年度最新版】英語スピーキングをChat GPTで強化！<br>
+                  AI時代の最新学習法【プロンプト付き】</h5>
+                <p class="column_date">2025/○○/○○</p>
+              </div>
+            </a>
           </div>
         </section>
         <section class="p-index__column">
