Column for Learners

--- a/column/index.html
+++ b/column/index.html
@@ -134,14 +134,6 @@
                 <p class="column_date">2024/09/09</p>
               </div>
             </a>
-            <a href="../column/04/index.html" class="p-index__column_link">
-              <img src="../assets/img/column_04/thumbnail1.png" alt="コラムサムネイル">
-              <div class="p-index__column_link_info">
-                <h5 class="column_head">【2025年度最新版】英語スピーキングをChat GPTで強化！<br>
-                  AI時代の最新学習法【プロンプト付き】</h5>
-                <p class="column_date">2025/○○/○○</p>
-              </div>
-            </a>
           </div>
         </section>
         <section class="p-index__column">
@@ -152,6 +144,19 @@
               <div class="p-index__column_link_info">
                 <h5 class="report_head">グローバル人材育成の課題とは？<br>人事に求められる取り組みや役割を解説【セミナーレポート】</h5>
                 <p class="report_date">2024/12/04</p>
+              </div>
+            </a>
+          </div>
+        </section>
+        <section class="p-index__column">
+          <h4 class="o-headline is__medium">Column For Learners</h4>
+          <div class="p-index__column_box">
+            <a href="../column/04/index.html" class="p-index__column_link">
+              <img src="../assets/img/column_04/thumbnail1.png" alt="コラムサムネイル">
+              <div class="p-index__column_link_info">
+                <h5 class="column_head">【2025年度最新版】英語スピーキングをChat GPTで強化！<br>
+                  AI時代の最新学習法【プロンプト付き】</h5>
+                <p class="column_date">2025/○○/○○</p>
               </div>
             </a>
           </div>
