--- a/column/04/index.html
+++ b/column/04/index.html
@@ -8,6 +8,21 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TGNVVPT');</script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "author": [
+      {
+        "@type": "Person",
+        "name": "椿 祐輔",
+        "jobTitle": "代表取締役",
+        "url": "https://thepast.jp/"
+      }
+    ]
+  }
+  </script>  
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
