--- a/column/04/index.html
+++ b/column/04/index.html
@@ -88,7 +88,7 @@
 <main class="p-column p-column02">
     <div class="column04_title_section">
     <h1 class="column04_title">【2025年度最新版】英語スピーキングをChat GPTで強化！<br>AI時代の最新学習法【プロンプト付き】</h1>
-    <p class="column04_date">公開日：○○○○年○○月○○日</p>
+    <p class="column04_date">公開日：2025年05月14日</p>
     <img class="head_img" src="../../assets/img/column_04/Illustration_1.png" alt="">
     </div>
 
@@ -101,6 +101,7 @@
           <p class="profile_name">椿祐輔</p>
           <p class="profile_title">The Past CEO</p>
           <p class="profile_text">VERSANT満点(90点)、CEFR C2レベルの英語力を有する。フィリピンの語学学校で10年以上にわたりカリキュラムと教材開発に従事し、述べ5,000人以上の多国籍な英語学習者（日本、中国、台湾、ベトナム、ロシア等）の学習をサポート。言語学と音声学に精通しており、現在は株式会社The Pastの代表取締役、カリキュラム開発者として、グローバルな英語教育を推進している。</p>
+          <p class="profile_link"><a href="https://thepast.jp/">The Past 公式HP</a></p>
         </div>
       </div>
     </div>
