--- a/column/index.html
+++ b/column/index.html
@@ -156,7 +156,7 @@
               <div class="p-index__column_link_info">
                 <h5 class="column_head">【2025年度最新版】英語スピーキングをChat GPTで強化！<br>
                   AI時代の最新学習法【プロンプト付き】</h5>
-                <p class="column_date">2025/○○/○○</p>
+                <p class="column_date">2025/05/14</p>
               </div>
             </a>
           </div>
