add link to profile

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
               <img src="assets/img/column_04/thumbnail1.png" alt="コラムサムネイル">
               <div class="p-index__column_link_info">
                 <h5 class="report_head" style="color: white;">【2025年度最新版】英語スピーキングをChat GPTで強化！<br>AI時代の最新学習法【プロンプト付き】</h5>
-                <p class="report_date" style="color: white;">2025/○○/○○</p>
+                <p class="report_date" style="color: white;">2025/05/14</p>
               </div>
             </a>
           </div>
